# search_utils

./: CMakeLists.txt  README.md  search_utils.vix  vix.json
examples/: binary_search_example.cpp  bounds_example.cpp  contains_example.cpp
include/search_utils/: search_utils.hpp
tests/: test_basic.cpp
